@@ -28,6 +28,7 @@ Jython 2.5.2a1
     - [ 1479 ] xml parser file lock
     - [ 1582 ] com.ziclix.python.sql.PyConnection leaks memory
     - [ 1520 ] os.listdir doesn't return unicode when requested
+    - [ 1483 ] optparse std module dies on non-ASCII unicode data
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
